
          Release Notes for Bacula 1.35.5

  Bacula code: Total files = 395 Total lines = 115,062 (*.h *.c *.in)


Changes for 1.35.5
Major Changes:
- Tray monitor program
- Bacula Rescue CDROM     
- Lots of improvements in the Rescue scripts -- better 
  network detection, better mounting code, ...
- General bug fixes/stabilization
- French translation of manual by Ludovic Strappazon well    
  underway.
- UTF-8 is supported in conio (some minor cleanup is needed).
- Improved conf scanning code allowing FileSet components to
  be put on a single line (previously everything had to be on
  a different line).
- Win32 files restored to an alternate directory will have the
  colon following the drive letter turned into a / e.g. c: 
  becomes c/. Previously the c: was stripped. This applies only
  to files written to an alternate directory (i.e. using a where=).

New Directives:
- Added "Ignore FileSet Changes = yes"
- Added "Block positioning = yes/no" in Device resource in SD.
- Added "Multiple connections = yes/no" in Catalog record for
  allowing multiple simultaneous connections to the database.
  This is a major performance improvement for PostgreSQL.

Items to note!!!
- As of 1.35.5 you MUST do a database update.
- All daemons should be compatible with 1.34 with the exception
  of the new FileSet features such as regular expressions.
- Regular expressions are not implemented in the Win32 FD.

Other Items:
- See below

Changes to 1.35.5:
22Sep04
- Incremented the release number because this version requires
  an update to the database.
  Use:
    cd src/cats
    ./update_bacula_tables  
  to update an existing database.
- Implemented EndFile and EndBlock in the Media record. This will
  allow Bacula to know exactly when to stop reading a tape if the
  stupid tape driver does not give a logical end of tape indication 
  and Bacula writes to the end of the tape getting an I/O error.
- Added new routines to update the database, and there are